endpoint in artist for genres
